Drop Chef's log level to info - it's gotten too busy with download packet logging

--- a/aws/cloudformation.json.erb
+++ b/aws/cloudformation.json.erb
@@ -414,7 +414,7 @@
                             }, 
                             "/etc/chef/solo.rb": {
                                 "content": { "Fn::Join": [ "", [
-                                    { "Fn::If": [ "Debug", "log_level :debug\n", "" ] },
+                                    { "Fn::If": [ "Debug", "log_level :info\n", "" ] },
                                     "log_location \"/var/log/chef-solo.log\"\n", 
                                     "file_cache_path \"/var/lib/chef-solo\"\n", 
                                     "cookbook_path \"/var/lib/chef-solo/cookbooks\"\n", 
